Added JVM options for testing